making posts show at /posts.

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,8 @@
 <h1>Posts</h1>
+
+<% @posts.each do |post| %>
+<p><%= post.title %></p>
+<p><%= post.author %></p>
+<p><img src="<%= post.url %>"></p>
+<p><%= post.content %></p>
+<% end %>
