--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,5 @@
 <h1>Write new post</h1>
+<%= link_to "Back to Posts", posts_url %>
 <%= form_for(Post.new) do |f| %>
 <p>
     <%= f.label :title %><br>
