--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,5 @@
+<%= link_to "Back to Posts", posts_url %>
+
 <p><%= @post.title %></p>
 <p><%= @post.author %></p>
 <p><img src="<%= @post.url %>"></p>
